theme/totara/styles_totara.css
/* ... */
/*****************************************************************************/
/** Learning Plans **/
/*****************************************************************************/

table.planlist tr.r0 {
    background-color: #F0F0F0;
    height: 20px;
}

table.planlist td.options {
    text-align: center;
}

table.planitems {
    margin: 8px 0px 0px 8px;
    width: 532px;
}

table.planitems tr {
    height: 25px;
}

table.planitems tr.r0 {
    background-color: #F0F0F0;
}


/*****************************************************************************/
/** Dashboards **/
/*****************************************************************************/


.dashboard .dashlet_container {
    background: url("images/left_menu_bg.gif") repeat-y scroll left top transparent;
}
.dashboard .dashlet .header {
	margin-top: 5px;
    padding: 6px 15px;
    background: url("images/left_menu_header_bg.gif") no-repeat scroll left top transparent;
}
    .dashboard .dashlet .header h2 {
	font-size: 1.4em;
	font-weight: bold;
	color: #FFFFFF;
    }

table.centerblock td, th {
  text-align: left;
  padding: 2px;
}

table.centerblock th.course, table.centerblock td.course {
  width: 322px;
}

table.centerblock th.status, table.centerblock td.status {
  width: 40px;
}

table.centerblock th.enroldate, table.centerblock td.enroldate,
table.centerblock th.startdate, table.centerblock td.startdate,
table.centerblock th.completeddate, table.centerblock td.completeddate {
  width: 50px;
  text-align: center;
}

table.centerblock th.status, table.centerblock td.status {
  text-align: left;
}

#site-index #middle-column div.mycourses div.allmycourses {
  margin-top: 5px;
  margin-left: 2px;
  margin-bottom: 0px;
  font-weight: bold;
}

#site-index #middle-column div.mycourses {
  width: 527px;
  margin: 0px 0px;
  border:none;
  background: none;
}

#site-index #middle-column div.mycourses div.header h2 {
  color:#FFFFFF;
  font-size:1.5em;
  margin:0;
  padding-left: 7px;
  padding-top: 7px;
  padding-bottom: 6px;
  font-weight: normal;
  border:none;
}

#site-index #middle-column div.mycourses div.header {
  border:0 none;
  border-bottom:none;
  background: #a2b001;
}

#site-index #middle-column div.mycourses .content {
  padding: 0 1px;
}
#site-index #middle-column div.mycourses .content th {
  padding:6px 7px;
  font-size: 1.1em;
  color: #a2b001;
  background: #f5f5f5;
}
#site-index #middle-column div.mycourses .content td {
  padding:6px 7px;
  font-size: 0.9em;

}
#site-index #middle-column div.mycourses .content a {
   color:#322f2c;
}
#site-index #middle-column div.mycourses .content .allmycourses {
   font-family: 'Trebuchet ms', Verdana, Arial, Helvetica, sans-serif;
   text-align:right;
   font-size: 1em;
   font-weight:normal;
   padding: 5px 7px 5px 7px;
}
#site-index #middle-column div.mycourses .content .allmycourses a {
   padding-right: 17px;
   background: url('images/arw_grn.gif') no-repeat right center;
}

#site-index #middle-column div.mycourses .content .noenrollments {
    display: block;
    padding: 10px;
}

/*****************************************************************************/
/** My Team **/
/*****************************************************************************/

table.allmyteam td {
  text-align:right;
  padding-right: 10px;
  vertical-align: center;
}

table.allmyteam td.c2 {
  padding:5px;
  background: url('images/course_bg_ftr.gif') no-repeat left bottom;
}

table.allmyteam td.c2 img {
  display:none;
}

table.allmyteam td.c3 {
  background: url('images/course_bg_ftr.gif') no-repeat right bottom;
}

table.allmyteam td a {
  font-family: 'Trebuchet ms', verdana, helvetica, sans-serif;
  font-weight: normal;
  font-size: 1em;
  background: url('images/arw_blu.gif') no-repeat right 3px;
}

#my-teammembers #middle-column table.flexible td {
  font-size:0.9em;
}

#my-teammembers #middle-column table.flexible th {
  font-family: Verdana, Arial, Helvetica, sans-serif;
  color: #34b9e4;
}
.learning-plan-pending-approval-table .lastcol{
    width:250px;
}
#local-plan-approve .tabtree .tabrow0{
    padding-bottom:10px;
}


/*****************************************************************************/
/** Tables **/
/*****************************************************************************/

.generaltable {
    width: 100%;
}

.generaltable .cell {
    background-color: none !important;
}

.cell {
    padding: 3px;
}

tr.r0 .cell,
tr.r0 td {
    background: #F0F0F0;
}
tr.r1 .cell,
tr.r1 td {
    background: #FFFFFF;
}

td.c0 {
    text-align: left;
}

th.header {
    font-size: 0.9em;
}

table.customfields th.lastcol,
table.customfields td.lastcol{
    text-align: center !important;
}

table.borderless td {
    border-color: #ffffff;
    vertical-align: top;
}

body#hierarchy-index table#competency tr.r0 td.customfield {
    background: #f5f5f5;
}

body#hierarchy-index table#competency tr.r1 td.customfield {
    background: #FFFFFF;
}

table.flexible .r1 {
    background-color:#FFFFFF;
}


/*****************************************************************************/
/** Guides Tables **/
/*****************************************************************************/

#guides-index .r1{
	background: #FFFFFF;
}

/*****************************************************************************/
/** Form **/
/*****************************************************************************/

form#newfieldform {
    padding:10px 0 0;
    display: table;
}

/*****************************************************************************/
/** Guide Steps **/
/*****************************************************************************/

.guidesteps {
    clear: left;
    height: 100%;
	padding-top: 10px;
}

.guidestep {
	border: 1px solid #EEEEEE;
	word-wrap: break-word;
}

.guidestepcontainer {
    float: left;
    width: 25%;
    height: 100%;
}

.guidesteptitle {
	border-bottom: none;
	padding: 5px;
}
/* ... */

